Update README to prioritize shell configuration over .env files
- Clarify that shell configuration (~/.zshrc) is the primary method
- Mark .env files as optional alternative
- Update API credentials section to reference shell configuration
- Add note that shell variables take precedence over .env files

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,11 @@ GITHUB_TOKEN=your-github-personal-access-token
 # Google AI/Gemini Configuration (optional but recommended)
 GOOGLE_API_KEY=your-google-api-key
 
+# Gemini Model Selection (optional)
+# Options: gemini-2.5-flash (faster, good quality), gemini-2.5-pro (highest quality)
+# Default: gemini-2.5-flash
+GEMINI_MODEL=gemini-2.5-flash
+
 # Database (optional - defaults to SQLite)
 DATABASE_URL=sqlite:./database.sqlite
 
